fix col-resize cursor flicker issue

--- a/packages/@adobe/spectrum-css-temp/components/table/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/table/index.css
@@ -86,6 +86,13 @@ svg.spectrum-Table-sortedIcon {
   }
 }
 
+.spectrum-Table--resizingColumn {
+  .spectrum-Table-row,
+  .spectrum-Table-headCell {
+    cursor: col-resize;
+  }
+}
+
 .spectrum-Table-columnResizer {
   display: flex;
   justify-content: end;
